@@ -15,23 +15,24 @@
 
 package ohos.devtools.datasources.transport.hdc;
 
+import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
 import java.io.BufferedReader;
+import java.io.Closeable;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.nio.charset.Charset;
 import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.Map;
 import java.util.concurrent.TimeUnit;
 
 /**
  * Interact with commands on the device side
- *
- * @version 1.0
- * @date 2021/02/01 10:47
- **/
+ */
 public class HdcWrapper {
     // Log
     private static final Logger LOGGER = LogManager.getLogger(HdcWrapper.class);
@@ -66,58 +67,33 @@ public class HdcWrapper {
      * @param hdcCmd hdc command
      * @return String
      */
-    public String getHdcStringResult(String hdcCmd) {
-        String line = "";
+    public String getHdcStringResult(ArrayList<String> hdcCmd) {
+        String line;
         StringBuilder cmdStrResult = new StringBuilder();
         try {
-            // Excuting an order
-            Process process = Runtime.getRuntime().exec(hdcCmd);
-            // Error command result output stream
-            // Get command result output stream
-            try (InputStream inputStream = process.getInputStream();
-                InputStream errorStream = process.getErrorStream();
-                BufferedReader brInputStream = new BufferedReader(
-                    new InputStreamReader(inputStream, Charset.forName("gbk")));
-                BufferedReader brErrorStream = new BufferedReader(new InputStreamReader(errorStream))) {
+            Process process = new ProcessBuilder(hdcCmd).start();
+            InputStream inputStream = null;
+            InputStream errorStream = null;
+            BufferedReader brInputStream = null;
+            BufferedReader brErrorStream = null;
+            try {
+                inputStream = process.getInputStream();
+                errorStream = process.getErrorStream();
+                brInputStream = new BufferedReader(new InputStreamReader(inputStream, Charset.forName("gbk")));
+                brErrorStream = new BufferedReader(new InputStreamReader(errorStream));
                 while ((line = brInputStream.readLine()) != null || (line = brErrorStream.readLine()) != null) {
                     cmdStrResult.append(line).append(System.getProperty("line.separator"));
                 }
             } catch (IOException ioException) {
-                LOGGER.error("ioException error: " + ioException.getMessage());
+                LOGGER.error("ioException error: " + ioException);
+            } finally {
+                close(inputStream);
+                close(errorStream);
+                close(brErrorStream);
+                close(brInputStream);
             }
         } catch (IOException ioException) {
-            LOGGER.error("ioException error: " + ioException.getMessage());
-        }
-        return cmdStrResult.toString();
-    }
-
-    /**
-     * getHdcStringArrayResult
-     *
-     * @param hdcCmd hdc command
-     * @return String
-     */
-    public String getHdcStringArrayResult(String[] hdcCmd) {
-        String line = "";
-        StringBuilder cmdStrResult = new StringBuilder();
-        try {
-            // 执行命令
-            Process process = Runtime.getRuntime().exec(hdcCmd);
-            // 错误命令结果输出流
-            // 获取命令结果输出流
-            try (InputStream inputStream = process.getInputStream();
-                InputStream errorStream = process.getErrorStream();
-                BufferedReader brInputStream = new BufferedReader(
-                    new InputStreamReader(inputStream, Charset.forName("gbk")));
-                BufferedReader brErrorStream = new BufferedReader(new InputStreamReader(errorStream))) {
-                while ((line = brInputStream.readLine()) != null || (line = brErrorStream.readLine()) != null) {
-                    cmdStrResult.append(line).append(System.getProperty("line.separator"));
-                }
-            } catch (IOException ioException) {
-                LOGGER.error("ioException error: " + ioException.getMessage());
-            }
-        } catch (IOException ioException) {
-            LOGGER.error("ioException error: " + ioException.getMessage());
+            LOGGER.error("ioException error: " + ioException);
         }
         return cmdStrResult.toString();
     }
@@ -128,30 +104,38 @@ public class HdcWrapper {
      * @param hdcCmd hdc command
      * @return String
      */
-    public String execCmdBy(String hdcCmd) {
-        // Excuting an order
-        Process process = null;
-        String line = "";
+    public String execCmdBy(ArrayList<String> hdcCmd) {
+        Process process;
+        String line;
         StringBuilder cmdStrResult = new StringBuilder();
         try {
-            process = Runtime.getRuntime().exec(hdcCmd);
-            // Get command and error command result output stream
-            try (InputStream inputStream = process.getInputStream();
-                InputStream errorStream = process.getErrorStream();
-                BufferedReader brInputStream = new BufferedReader(
-                    new InputStreamReader(inputStream, Charset.forName("gbk")));
-                BufferedReader brErrorStream = new BufferedReader(new InputStreamReader(errorStream))) {
+            process = new ProcessBuilder(hdcCmd).start();
+            InputStream inputStream = null;
+            InputStream errorStream = null;
+            BufferedReader brInputStream = null;
+            BufferedReader brErrorStream = null;
+            try {
+                inputStream = process.getInputStream();
+                errorStream = process.getErrorStream();
+                brInputStream = new BufferedReader(new InputStreamReader(inputStream, Charset.forName("gbk")));
+                brErrorStream = new BufferedReader(new InputStreamReader(errorStream));
                 while ((line = brInputStream.readLine()) != null || (line = brErrorStream.readLine()) != null) {
+                    LOGGER.info("cmd result line {}", line);
+                    cmdStrResult.append(line);
                     if ("StartDaemonSuccess".equals(line)) {
                         break;
                     }
                 }
-                LOGGER.info("cmd result ok{}", cmdStrResult);
             } catch (IOException ioException) {
-                LOGGER.error("ioException error: " + ioException.getMessage());
+                LOGGER.error("ioException error: " + ioException);
+            } finally {
+                close(inputStream);
+                close(errorStream);
+                close(brErrorStream);
+                close(brInputStream);
             }
         } catch (IOException ioException) {
-            LOGGER.error("ioException error: " + ioException.getMessage());
+            LOGGER.error("ioException error: " + ioException);
         }
         return cmdStrResult.toString();
     }
@@ -159,30 +143,48 @@ public class HdcWrapper {
     /**
      * execCmdBy
      *
-     * @param hdcCmd  hdc command
+     * @param hdcCmd hdc command
      * @param timeout timeout
      * @return String
      */
-    public String execCmdBy(String hdcCmd, long timeout) {
-        // Excuting an order
-        Process process = null;
-        String line = "";
+    public String execCmdBy(ArrayList<String> hdcCmd, long timeout) {
+        if (hdcCmd.isEmpty()) {
+            return "";
+        }
+        Process process;
+        String line;
         StringBuilder cmdStrResult = new StringBuilder();
         try {
-            process = Runtime.getRuntime().exec(hdcCmd);
+            process = new ProcessBuilder(hdcCmd).start();
             process.waitFor(timeout, TimeUnit.MILLISECONDS);
-            // Get command and error command result output stream
-            try (InputStream inputStream = process.getInputStream();
-                InputStream errorStream = process.getErrorStream();
-                BufferedReader brInputStream = new BufferedReader(
-                    new InputStreamReader(inputStream, Charset.forName("gbk")));
-                BufferedReader brErrorStream = new BufferedReader(new InputStreamReader(errorStream))) {
+            InputStream inputStream = null;
+            InputStream errorStream = null;
+            BufferedReader brInputStream = null;
+            BufferedReader brErrorStream = null;
+            try {
+                inputStream = process.getInputStream();
+                errorStream = process.getErrorStream();
+                brInputStream = new BufferedReader(new InputStreamReader(inputStream, Charset.forName("gbk")));
+                brErrorStream = new BufferedReader(new InputStreamReader(errorStream));
+                while ((line = brInputStream.readLine()) != null || (line = brErrorStream.readLine()) != null) {
+                    LOGGER.info("cmd result line {}", line);
+                    cmdStrResult.append(line);
+                    // shell return success flag
+                    if ("StartDaemonSuccess".equals(line)) {
+                        break;
+                    }
+                }
                 LOGGER.info("cmd result ok {}", cmdStrResult);
             } catch (IOException ioException) {
-                LOGGER.error("ioException error: " + ioException.getMessage());
+                LOGGER.error("ioException error: " + ioException);
+            } finally {
+                close(inputStream);
+                close(errorStream);
+                close(brErrorStream);
+                close(brInputStream);
             }
         } catch (IOException | InterruptedException ioException) {
-            LOGGER.error("ioException error: " + ioException.getMessage());
+            LOGGER.error("ioException error: " + ioException);
         }
         return cmdStrResult.toString();
     }
@@ -193,18 +195,23 @@ public class HdcWrapper {
      * @param hdcStr hdc String
      * @return ArrayList<ArrayList < String>>
      */
-    public ArrayList<ArrayList<String>> getCliResult(String hdcStr) {
+    public ArrayList<ArrayList<String>> getCliResult(ArrayList<String> hdcStr) {
         // Each line of string read
-        String temp = "";
+        String temp;
         ArrayList<ArrayList<String>> result = new ArrayList<>();
         try {
-            Process process = Runtime.getRuntime().exec(hdcStr);
+            Process process = new ProcessBuilder(hdcStr).start();
             // Obtain the input stream through the process object to obtain the successful execution of the command
             // Get the error flow through the process object to get the command error situation
-            try (InputStream inputStream = process.getInputStream();
-                InputStream errorStream = process.getErrorStream();
-                BufferedReader brInput = new BufferedReader(new InputStreamReader(inputStream));
-                BufferedReader brError = new BufferedReader(new InputStreamReader(errorStream))) {
+            InputStream inputStream = null;
+            InputStream errorStream = null;
+            BufferedReader brInput = null;
+            BufferedReader brError = null;
+            try {
+                inputStream = process.getInputStream();
+                errorStream = process.getErrorStream();
+                brInput = new BufferedReader(new InputStreamReader(inputStream));
+                brError = new BufferedReader(new InputStreamReader(errorStream));
                 while ((temp = brInput.readLine()) != null || (temp = brError.readLine()) != null) {
                     temp = temp.trim();
                     if (!"".equals(temp)) {
@@ -220,10 +227,15 @@ public class HdcWrapper {
                     }
                 }
             } catch (IOException ioException) {
-                LOGGER.error("ioException error: " + ioException.getMessage());
+                LOGGER.error("ioException error: " + ioException);
+            } finally {
+                close(inputStream);
+                close(errorStream);
+                close(brError);
+                close(brInput);
             }
         } catch (IOException ioException) {
-            LOGGER.error("ioException error: " + ioException.getMessage());
+            LOGGER.error("ioException error: " + ioException);
         }
         return result;
     }
@@ -232,20 +244,63 @@ public class HdcWrapper {
      * Get result list
      *
      * @param hdcStr hdc String
+     * @return Map<String, String>
+     */
+    public Map<String, String> getCmdResultMap(ArrayList<String> hdcStr) {
+        Map<String, String> resultMap = new HashMap<>();
+        try {
+            Process process = new ProcessBuilder(hdcStr).start();
+            InputStream inputStream = null;
+            InputStream errorStream = null;
+            BufferedReader brInput = null;
+            BufferedReader brError = null;
+            try {
+                inputStream = process.getInputStream();
+                brInput = new BufferedReader(new InputStreamReader(inputStream));
+                errorStream = process.getErrorStream();
+                brError = new BufferedReader(new InputStreamReader(errorStream));
+                String temp;
+                while ((temp = brInput.readLine()) != null || (temp = brError.readLine()) != null) {
+                    String[] strings = temp.trim().split("  ");
+                    resultMap.put(strings[1], strings[0]);
+                }
+            } catch (IOException ioException) {
+                LOGGER.error("ioException error: " + ioException);
+            } finally {
+                close(inputStream);
+                close(errorStream);
+                close(brError);
+                close(brInput);
+            }
+        } catch (IOException ioException) {
+            LOGGER.error("ioException error: " + ioException);
+        }
+        return resultMap;
+    }
+
+    /**
+     * Get result list
+     *
+     * @param hdcStr hdc String
      * @return ArrayList<ArrayList < String>>
      */
-    public ArrayList<ArrayList<String>> getListResult(String hdcStr) {
+    public ArrayList<ArrayList<String>> getListResult(ArrayList<String> hdcStr) {
         // Each line of string read
-        String temp = "";
+        String temp;
         ArrayList<ArrayList<String>> devices = new ArrayList<>();
         // Number of rows read to return value
         int lines = 0;
         try {
-            Process process = Runtime.getRuntime().exec(hdcStr);
-            try (InputStream inputStream = process.getInputStream();
-                BufferedReader brInput = new BufferedReader(new InputStreamReader(inputStream));
-                InputStream errorStream = process.getErrorStream();
-                BufferedReader brError = new BufferedReader(new InputStreamReader(errorStream))) {
+            Process process = new ProcessBuilder(hdcStr).start();
+            InputStream inputStream = null;
+            InputStream errorStream = null;
+            BufferedReader brInput = null;
+            BufferedReader brError = null;
+            try {
+                inputStream = process.getInputStream();
+                brInput = new BufferedReader(new InputStreamReader(inputStream));
+                errorStream = process.getErrorStream();
+                brError = new BufferedReader(new InputStreamReader(errorStream));
                 while ((temp = brInput.readLine()) != null || (temp = brError.readLine()) != null) {
                     temp = temp.trim();
                     if (lines > 0 && !"".equals(temp)) {
@@ -262,11 +317,109 @@ public class HdcWrapper {
                     lines++;
                 }
             } catch (IOException ioException) {
-                LOGGER.error("ioException error: " + ioException.getMessage());
+                LOGGER.error("ioException error: " + ioException);
+            } finally {
+                close(inputStream);
+                close(errorStream);
+                close(brError);
+                close(brInput);
             }
         } catch (IOException ioException) {
-            LOGGER.error("ioException error: " + ioException.getMessage());
+            LOGGER.error("ioException error: " + ioException);
         }
         return devices;
+    }
+
+    /**
+     * Get result list
+     *
+     * @param hdcStr hdc String
+     * @return ArrayList<ArrayList < String>>
+     */
+    public ArrayList<ArrayList<String>> getListHdcStdResult(ArrayList<String> hdcStr) {
+        // Each line of string read
+        String temp;
+        ArrayList<ArrayList<String>> devices = new ArrayList<>();
+        // Number of rows read to return value
+        try {
+            Process process = new ProcessBuilder(hdcStr).start();
+            InputStream inputStream = null;
+            InputStream errorStream = null;
+            BufferedReader brInput = null;
+            BufferedReader brError = null;
+            try {
+                inputStream = process.getInputStream();
+                brInput = new BufferedReader(new InputStreamReader(inputStream));
+                errorStream = process.getErrorStream();
+                brError = new BufferedReader(new InputStreamReader(errorStream));
+                while ((temp = brInput.readLine()) != null || (temp = brError.readLine()) != null) {
+                    temp = temp.trim();
+                    if (!"".equals(temp)) {
+                        ArrayList<String> list = new ArrayList<>();
+                        String[] newLine = temp.split("\t");
+                        for (String str : newLine) {
+                            String s = str.trim();
+                            if (!"".equals(s)) {
+                                list.add(s);
+                            }
+                        }
+                        devices.add(list);
+                    }
+                }
+            } catch (IOException ioException) {
+                LOGGER.error("ioException error: " + ioException);
+            } finally {
+                close(inputStream);
+                close(errorStream);
+                close(brError);
+                close(brInput);
+            }
+        } catch (IOException ioException) {
+            LOGGER.error("ioException error: " + ioException);
+        }
+        return devices;
+    }
+
+    /**
+     * conversionCommand
+     *
+     * @param list list
+     * @param args args
+     * @return ArrayList
+     */
+    public static ArrayList<String> conversionCommand(ArrayList<String> list, String... args) {
+        int index = 0;
+        ArrayList<String> cmdlist = new ArrayList<>();
+        for (String string : list) {
+            if (StringUtils.equals(string, "%s")) {
+                cmdlist.add(args[index]);
+                index = index + 1;
+                continue;
+            }
+
+            if (string.contains("%s") && !StringUtils.equals(string, "%s")) {
+                if (args.length <= index) {
+                    cmdlist.add(string);
+                    continue;
+                } else {
+                    String replace = string.replace("%s", args[index]);
+                    cmdlist.add(replace);
+                }
+                index = index + 1;
+                continue;
+            }
+            cmdlist.add(string);
+        }
+        return cmdlist;
+    }
+
+    private void close(Closeable closeable) {
+        if (closeable != null) {
+            try {
+                closeable.close();
+            } catch (IOException exception) {
+                LOGGER.error("IOException ", exception);
+            }
+        }
     }
 }
